# finance-slm

./: .gitignore  .gitmodules  PRIVACY.md  README.md  build.gradle.kts  gradle.properties  keystore.properties.example  settings.gradle.kts
.github/workflows/: build.yml
androidApp/: build.gradle.kts  proguard-rules.pro
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/assets/: model_catalog.json
androidApp/src/main/cpp/: CMakeLists.txt
androidApp/src/main/java/com/habibi/financeslm/android/: FinanceSlmApp.kt  MainActivity.kt
androidApp/src/main/java/com/habibi/financeslm/android/di/: AndroidAppModule.kt
androidApp/src/main/java/com/habibi/financeslm/android/service/: FinanceScreenReaderService.kt  ModelDownloadWorker.kt  ScreenReaderBridge.kt
androidApp/src/main/java/com/habibi/financeslm/android/util/: Formatting.kt
androidApp/src/main/res/drawable/: ic_launcher_foreground.xml
androidApp/src/main/res/values/: colors.xml  strings.xml  themes.xml
androidApp/src/main/res/values-night/: colors.xml
androidApp/src/main/res/xml/: accessibility_service_config.xml
docs/: review-and-enhancements.md
gradle/: libs.versions.toml
iosApp/: README.md  project.yml
iosApp/FinanceSLM/: AppState.swift  FinanceSLMApp.swift  Info.plist  InsightsView.swift  ModelsView.swift  RootView.swift
iosApp/FinanceSLM/Resources/: model_catalog.json
scripts/: build-llama-android.sh  build-llama-ios.sh  compute-model-checksums.sh  create-github-repo.py
shared/: build.gradle.kts
shared/src/androidMain/cpp/: CMakeLists.txt  crash_handler.cpp  crash_handler.h  llama_jni.cpp
shared/src/androidMain/kotlin/com/habibi/financeslm/data/datasource/: ModelDownloadDataSource.android.kt
shared/src/androidMain/kotlin/com/habibi/financeslm/data/repository/: ScreenDataRepositoryImpl.android.kt
shared/src/androidMain/kotlin/com/habibi/financeslm/db/: DatabaseDriverFactory.android.kt
shared/src/androidMain/kotlin/com/habibi/financeslm/di/: PlatformModule.android.kt
shared/src/androidMain/kotlin/com/habibi/financeslm/inference/: LlamaEngine.android.kt
shared/src/androidMain/kotlin/com/habibi/financeslm/platform/: DeviceInfo.android.kt  FileSystem.android.kt  PlatformContext.android.kt  ScreenReader.android.kt
shared/src/androidMain/kotlin/com/habibi/financeslm/service/: ScreenReaderBridge.kt
shared/src/androidMain/kotlin/com/habibi/financeslm/util/: ChecksumVerifier.android.kt  Logger.android.kt  Time.android.kt
shared/src/commonMain/kotlin/com/habibi/financeslm/data/datasource/: LoraStorageDataSource.kt  ModelDownloadDataSource.kt  ModelStorageDataSource.kt  PreferencesDataSource.kt
shared/src/commonMain/kotlin/com/habibi/financeslm/data/mapper/: ModelMapper.kt
shared/src/commonMain/kotlin/com/habibi/financeslm/data/repository/: DownloadEnqueuer.kt  InferenceRepositoryImpl.kt  LoraRepositoryImpl.kt  ModelRepositoryImpl.kt  PreferencesRepositoryImpl.kt
shared/src/commonMain/kotlin/com/habibi/financeslm/db/: DatabaseDriverFactory.kt
shared/src/commonMain/kotlin/com/habibi/financeslm/di/: AppModule.kt  PlatformModule.kt
shared/src/commonMain/kotlin/com/habibi/financeslm/inference/: InferenceParams.kt  LlamaConfig.kt  LlamaEngine.kt  LlamaEngineFactory.kt  TokenStream.kt
shared/src/commonMain/kotlin/com/habibi/financeslm/platform/: DeviceInfo.kt  FileSystem.kt  PlatformContext.kt  ScreenReader.kt
shared/src/commonMain/kotlin/com/habibi/financeslm/prompt/: PromptBuilder.kt  PromptTemplate.kt  SystemPrompts.kt
shared/src/commonMain/kotlin/com/habibi/financeslm/util/: ChecksumVerifier.kt  CoroutineDispatchers.kt  Logger.kt  Result.kt  SingleThreadDispatcher.kt  Time.kt
shared/src/commonMain/sqldelight/com/habibi/financeslm/: FinanceInsight.sq  ScreenData.sq
shared/src/commonTest/kotlin/com/habibi/financeslm/prompt/: PromptBuilderTest.kt  PromptTemplateTest.kt
shared/src/iosMain/kotlin/com/habibi/financeslm/db/: DatabaseDriverFactory.ios.kt
shared/src/iosMain/kotlin/com/habibi/financeslm/di/: IosAppModule.kt  IosFlow.kt  KoinIos.kt
shared/src/iosMain/kotlin/com/habibi/financeslm/inference/: LlamaEngine.ios.kt
shared/src/iosMain/kotlin/com/habibi/financeslm/platform/: DeviceInfo.ios.kt  FileSystem.ios.kt  PlatformContext.ios.kt  ScreenReader.ios.kt
shared/src/iosMain/kotlin/com/habibi/financeslm/util/: ChecksumVerifier.ios.kt  Logger.ios.kt  Time.ios.kt
shared/src/nativeInterop/cinterop/: llama.def
(+47 files in other folders)
